# fine-tuning-sllm-customer-support

./: .gitignore  FINE_TUNNING_SLLM_PT1.md  FINE_TUNNING_SLLM_PT2.md  README.md  faqs.json  generate_training_data.py  merge_and_export.py  plot_training.py  prepare_rl_data.py  pyproject.toml  rewards.py  test_model.py  train.jsonl  train.py  train_grpo.py  val.jsonl
